[gd_scene format=3 uid="uid://bmjwyhfidksl2"]

[ext_resource type="Theme" uid="uid://b3edlo7i72cqp" path="res://Materials/UI.tres" id="1_rcnvp"]
[ext_resource type="Script" uid="uid://dwoopjfgxk6vc" path="res://Scenes/UI/game_ui.gd" id="2_nr13x"]
[ext_resource type="Texture2D" uid="uid://mp5pvshecj7t" path="res://Assets/UI/Dialogue_filler.png" id="3_g7o0n"]

[node name="GameUi" type="Control" unique_id=1653777319]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rcnvp")
script = ExtResource("2_nr13x")

[node name="dialog" type="Control" parent="." unique_id=315729378]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="dialog" unique_id=1443556567]
top_level = true
layout_mode = 0
offset_left = 139.955
offset_top = 523.875
offset_right = 411.95502
offset_bottom = 578.875
text = "SpeakerName"

[node name="RichTextLabel" type="RichTextLabel" parent="dialog" unique_id=745352608]
top_level = true
layout_mode = 0
offset_left = 149.0
offset_top = 616.0
offset_right = 1557.0
offset_bottom = 885.0
text = "This is a test dialog. we should probably at least limit text to 2, maybe 3 sentences before it goes out of scope of this border."
scroll_active = false

[node name="Sprite2D" type="Sprite2D" parent="dialog" unique_id=852013225]
position = Vector2(857, 650)
scale = Vector2(1.3777778, 0.4180328)
texture = ExtResource("3_g7o0n")

[node name="options" type="Control" parent="." unique_id=1070552990]
visible = false
anchors_preset = 0
offset_left = 200.0
offset_top = 760.0
offset_right = 240.00017
offset_bottom = 800.0

[node name="optionList" type="VBoxContainer" parent="options" unique_id=1542722820]
layout_mode = 0
offset_right = 416.0
offset_bottom = 155.0

[node name="movement" type="Button" parent="options/optionList" unique_id=737790236]
layout_mode = 2
text = "Movement"

[node name="observe" type="Button" parent="options/optionList" unique_id=2143006218]
layout_mode = 2
text = "Observe"

[node name="communicate" type="Button" parent="options/optionList" unique_id=1766065032]
layout_mode = 2
text = "Communicate"

[node name="pause" type="Control" parent="." unique_id=217942632]
visible = false
anchors_preset = 0
offset_left = 200.0
offset_top = 760.0
offset_right = 240.00006
offset_bottom = 799.99994

[node name="VBoxContainer" type="VBoxContainer" parent="pause" unique_id=408612978]
layout_mode = 0
offset_right = 416.0
offset_bottom = 155.0

[node name="Return" type="Button" parent="pause/VBoxContainer" unique_id=1977061669]
layout_mode = 2
text = "Return"

[node name="Save" type="Button" parent="pause/VBoxContainer" unique_id=653330707]
layout_mode = 2
text = "Save
"

[node name="Exit" type="Button" parent="pause/VBoxContainer" unique_id=2129676132]
layout_mode = 2
text = "Exit
"

[node name="Label" type="Label" parent="." unique_id=249581073]
layout_mode = 0
offset_left = 1332.0
offset_top = 1027.0
offset_right = 1892.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 21
text = "ESC: pause menu | Mouse: select item / continue dialog"

[connection signal="pressed" from="options/optionList/movement" to="." method="_on_movement_pressed"]
[connection signal="pressed" from="options/optionList/communicate" to="." method="_on_communicate_pressed"]
[connection signal="pressed" from="pause/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="pause/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="pause/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
